AC_INIT(mailmonitor.c)
AM_INIT_AUTOMAKE(mailmonitor,1.0)
AM_CONFIG_HEADER(config.h)

CFLAGS="$CFLAGS -D__ML_CGI_GLOBAL_VARIABLES__"
#AM_CFLAFS = -Wall -c -D__ML_CGI_GLOBAL_VARIABLES__
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_LANG_C


# check for getopt_long in standard library
#HAVE_GETOPT_LONG=no
#AC_CHECK_FUNC(getopt_long, HAVE_GETOPT_LONG="yes")
#if test "x$HAVE_GETOPT_LONG" = xyes ; then
#  AC_DEFINE(HAVE_GETOPT_LONG, [], [Define to 1 if you have the 'getop_long' function])
#else
  # FreeBSD has a gnugetopt library
  AC_CHECK_LIB(gnugetopt, main,,)
#    if test "x$HAVE_GETOPT_LONG" = xyes ; then
#      AC_DEFINE(HAVE_GETOPT_LONG, [], 
#      [Define to 1 if you have the 'getop_long' function])
#      GETOPT_LONG_LIBS="-lgnugetopt"
#      AC_SUBST(GETOPT_LONG_LIBS)
#    fi
#fi

AC_OUTPUT(Makefile)
